# fairpulse-agent

./: .dockerignore  .gitignore  LICENSE  README.md  demo.sh  demo_public.sh  pyproject.toml
api/: .env.example  __init__.py  db.py  jobs.py  main.py  observability.py  schemas.py  settings.py
api/deploy/: Dockerfile  README.md  docker-compose.db.yml  docker-compose.yml  requirements.txt
api/tests/: test_api.py  test_schemas.py
ci/: README.md  ci.yml
docs/: DEMO.md
docs/examples/: rapport_exemple.md
docs/images/: langgraph.mmd  rag_schema.mmd
mcp_server/: __init__.py  server.py  store.py  try_tool.py
rag/: __init__.py  build_index.py  chunker.py  embedder.py  store.py
rag/corpus/: README.md
src/agent/: __init__.py  config.py  graph.py  mcp_client.py  mcp_graph.py  mcp_graph_rag.py  mcp_nodes.py  mcp_state.py  nodes.py  report.py  run.py  run_mcp.py  run_rag.py  sampling.py  state.py
